2004-01-26  Rodney Dawes  <dobey@ximian.com>

	* e-shell-window.c (setup_widgets): Add panded widget to
	EShellWindowPrivate and handle state saving of position (#52049)
	* e-task-bar.c (init): Switch to EClippedLabel instead of GtkLabel
	for the status bar text (#52937)

	Fixes #52049 and #52937

2004-01-26  JP Rosevear <jpr@ximian.com>

	* e-shell.c (e_shell_construct): there is no splash screen any
	more

2004-01-26  JP Rosevear <jpr@ximian.com>

	* main.c: drop now useless gtkhtml/gconf check

2004-01-23  Rodney Dawes  <dobey@ximian.com>

	* main.c (idle_cb): Move uri_list loop into a separate function
	so we don't duplicate code in both instances where we are creating
	a new shell or using a current one, and don't open a new shell window
	if we are passing in a uri and a shell is already up

	Fixes #53216

2004-01-15  JP Rosevear <jpr@ximian.com>

	* e-config-upgrade.c: remove calendar and task keys for upgrade,
	its done in the calendar now

2004-01-15  Rodrigo Moya <rodrigo@ximian.com>

	* e-shell-view-menu.c: added ForgetPasswords menu item.
	(command_forget_passwords): callback for the new menu item.

	* e-shell-window-commands.c: (command_forget_passwords): ditto.

2004-01-15  JP Rosevear <jpr@ximian.com>

	* main.c (kill_dataserver): kill the correct binary, tidy includes

2004-01-15  JP Rosevear <jpr@ximian.com>

	* main.c (detect_version): move version detection here

	* e-config-upgrade.c: remove it from here; clean out all the
	mailer and bonobo conf conversion stuff, its been moved to the
	mailer and e-util

	* e-config-upgrade.h: remove proto

2004-01-15  Not Zed  <NotZed@Ximian.com>

	* e-config-upgrade.c (e_upgrade_detect_version): fix the check for
	~/evolution being a directory.

2004-01-13  JP Rosevear <jpr@ximian.com>

	* main.c (attempt_upgrade): detect the version more completely
	with the new util routine
	(main): don't upgrade the config db here

	* e-shell.h: update proto
