@@ -1,3 +1,11 @@
+2004-01-21  Not Zed  <NotZed@Ximian.com>
+
+	* e-shell.c (attempt_upgrade, detect_version, e_shell_construct):
+	attempt the upgrade before trying to startup the wizard.
+
+	* main.c (detect_version, attempt_upgrade): move to e-shell.c
+	(idle_cb): remove call to attempt_upgrade.
+
 2004-01-26  Rodney Dawes  <dobey@ximian.com>
 
 	* e-shell-window.c (setup_widgets): Add panded widget to
